fix: resolve Dataview overflow issue

--- a/packages/atlas/src/themesource/atlas_core/web/core/widgets/_scroll-container-react.scss
+++ b/packages/atlas/src/themesource/atlas_core/web/core/widgets/_scroll-container-react.scss
@@ -202,6 +202,7 @@
         pointer-events: auto;
     }
 
+    .mx-scrollcontainer-center,
     .region-content {
         .mx-layoutgrid,
         .mx-layoutgrid-fluid {
